v1.1.0/modules/schema/pages/class/SynchronousMachineTimeConstantReactance.adoc
= `SynchronousMachineTimeConstantReactance`
:toclevels: 4


+++Synchronous machine detailed modelling types are defined by the combination of the attributes SynchronousMachineTimeConstantReactance.modelType and SynchronousMachineTimeConstantReactance.rotorType.  
Parameter details:
<ol>
	<li>The “p” in the time-related attribute names is a substitution for a “prime” in the usual parameter notation, e.g. tpdo refers to <i>T'do</i>.</li>
	<li>The parameters used for models expressed in time constant reactance form include:</li>
</ol>
- RotatingMachine.ratedS (<i>MVAbase</i>);
- RotatingMachineDynamics.damping (<i>D</i>);
- RotatingMachineDynamics.inertia (<i>H</i>);
- RotatingMachineDynamics.saturationFactor (<i>S1</i>);
- RotatingMachineDynamics.saturationFactor120 (<i>S12</i>);
- RotatingMachineDynamics.statorLeakageReactance (<i>Xl</i>);
- RotatingMachineDynamics.statorResistance (<i>Rs</i>);
- SynchronousMachineTimeConstantReactance.ks (<i>Ks</i>);
- SynchronousMachineDetailed.saturationFactorQAxis (<i>S1q</i>);
- SynchronousMachineDetailed.saturationFactor120QAxis (<i>S12q</i>);
- SynchronousMachineDetailed.efdBaseRatio;
- SynchronousMachineDetailed.ifdBaseType;
- .xDirectSync (<i>Xd</i>);
- .xDirectTrans (<i>X'd</i>);
- .xDirectSubtrans (<i>X''d</i>);
- .xQuadSync (<i>Xq</i>);
- .xQuadTrans (<i>X'q</i>);
- .xQuadSubtrans (<i>X''q</i>);
- .tpdo (<i>T'do</i>);
- .tppdo (<i>T''do</i>);
- .tpqo (<i>T'qo</i>);
- .tppqo (<i>T''qo</i>);
- .tc.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SynchronousMachineTimeConstantReactance`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]
**** xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
***** xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]
****** *`SynchronousMachineTimeConstantReactance`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ks,`ks`>>
//| [[slots_table.ks]]<<ks,`ks`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation loading correction factor (<i>Ks</i>) (&gt;= 0).  Used only by type J model.  Typical value = 0.+++
| _n/a_

| <<modelType,`modelType`>>
//| [[slots_table.modelType]]<<modelType,`modelType`>>
| 0..1 +
xref::enumeration/SynchronousMachineModelKind.adoc[`SynchronousMachineModelKind`]
| +++Type of synchronous machine model used in dynamic simulation applications.+++
| _n/a_

| <<rotorType,`rotorType`>>
//| [[slots_table.rotorType]]<<rotorType,`rotorType`>>
| 0..1 +
xref::enumeration/RotorKind.adoc[`RotorKind`]
| +++Type of rotor on physical machine.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Damping time constant for “Canay” reactance (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tpdo,`tpdo`>>
//| [[slots_table.tpdo]]<<tpdo,`tpdo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Direct-axis transient rotor time constant (<i>T'do</i>) (&gt; SynchronousMachineTimeConstantReactance.tppdo).  Typical value = 5.+++
| _n/a_

| <<tppdo,`tppdo`>>
//| [[slots_table.tppdo]]<<tppdo,`tppdo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Direct-axis subtransient rotor time constant (<i>T''do</i>) (&gt; 0).  Typical value = 0,03.+++
| _n/a_

| <<tppqo,`tppqo`>>
//| [[slots_table.tppqo]]<<tppqo,`tppqo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Quadrature-axis subtransient rotor time constant (<i>T''qo</i>) (&gt; 0). Typical value = 0,03.+++
| _n/a_

| <<tpqo,`tpqo`>>
//| [[slots_table.tpqo]]<<tpqo,`tpqo`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Quadrature-axis transient rotor time constant (<i>T'qo</i>) (&gt; SynchronousMachineTimeConstantReactance.tppqo). Typical...+++
| _n/a_

| <<xDirectSubtrans,`xDirectSubtrans`>>
//| [[slots_table.xDirectSubtrans]]<<xDirectSubtrans,`xDirectSubtrans`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Direct-axis subtransient reactance (unsaturated) (<i>X''d</i>) (&gt; RotatingMachineDynamics.statorLeakageReactance). ...+++
| _n/a_

| <<xDirectSync,`xDirectSync`>>
//| [[slots_table.xDirectSync]]<<xDirectSync,`xDirectSync`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Direct-axis synchronous reactance (<i>Xd</i>) (&gt;= SynchronousMachineTimeConstantReactance.xDirectTrans). The quotient of...+++
| _n/a_

| <<xDirectTrans,`xDirectTrans`>>
//| [[slots_table.xDirectTrans]]<<xDirectTrans,`xDirectTrans`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Direct-axis transient reactance (unsaturated) (<i>X'd</i>) (&gt;= SynchronousMachineTimeConstantReactance.xDirectSubtrans). ...+++
| _n/a_

| <<xQuadSubtrans,`xQuadSubtrans`>>
//| [[slots_table.xQuadSubtrans]]<<xQuadSubtrans,`xQuadSubtrans`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Quadrature-axis subtransient reactance (<i>X''q</i>) (&gt; RotatingMachineDynamics.statorLeakageReactance).  Typical value = 0,2.+++
| _n/a_

| <<xQuadSync,`xQuadSync`>>
//| [[slots_table.xQuadSync]]<<xQuadSync,`xQuadSync`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Quadrature-axis synchronous reactance (<i>Xq</i>) (&gt;= SynchronousMachineTimeConstantReactance.xQuadTrans).
The ratio of...+++
| _n/a_

| <<xQuadTrans,`xQuadTrans`>>
//| [[slots_table.xQuadTrans]]<<xQuadTrans,`xQuadTrans`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Quadrature-axis transient reactance (<i>X'q</i>) (&gt;= SynchronousMachineTimeConstantReactance.xQuadSubtrans).  Typical value = 0,3.+++
| _n/a_

| <<efdBaseRatio,`efdBaseRatio`>>
//| [[slots_table.efdBaseRatio]]<<efdBaseRatio,`efdBaseRatio`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Ratio (exciter voltage/generator voltage) of <i>Efd</i> bases of exciter and generator models (&gt; 0). Typical value = 1.+++
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]

| <<ifdBaseType,`ifdBaseType`>>
//| [[slots_table.ifdBaseType]]<<ifdBaseType,`ifdBaseType`>>
| 0..1 +
xref::enumeration/IfdBaseKind.adoc[`IfdBaseKind`]
| +++Excitation base system mode. It should be equal to the value of <i>WLMDV</i> given by the user. <i>WLMDV</i> is the PU ratio...+++
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]

| <<saturationFactor120QAxis,`saturationFactor120QAxis`>>
//| [[slots_table.saturationFactor120QAxis]]<<saturationFactor120QAxis,`saturationFactor120QAxis`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Quadrature-axis saturation factor at 120% of rated terminal voltage (<i>S12q</i>) (&gt;=...+++
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]

| <<saturationFactorQAxis,`saturationFactorQAxis`>>
//| [[slots_table.saturationFactorQAxis]]<<saturationFactorQAxis,`saturationFactorQAxis`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Quadrature-axis saturation factor at rated terminal voltage (<i>S1q</i>) (&gt;= 0). Typical value = 0,02.+++
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]

| <<CrossCompoundTurbineGovernorDyanmics,`CrossCompoundTurbineGovernorDyanmics`>>
//| [[slots_table.CrossCompoundTurbineGovernorDyanmics]]<<CrossCompoundTurbineGovernorDyanmics,`CrossCompoundTurbineGovernorDyanmics`>>
| 0..1 +
xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<CrossCompoundTurbineGovernorDynamics,`CrossCompoundTurbineGovernorDynamics`>>
//| [[slots_table.CrossCompoundTurbineGovernorDynamics]]<<CrossCompoundTurbineGovernorDynamics,`CrossCompoundTurbineGovernorDynamics`>>
| 0..1 +
xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 0..1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model associated with this synchronous machine model.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<GenICompensationForGenJ,`GenICompensationForGenJ`>>
//| [[slots_table.GenICompensationForGenJ]]<<GenICompensationForGenJ,`GenICompensationForGenJ`>>
| 0..* +
xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]
| +++Compensation of voltage compensator's generator for current flow out of this  generator.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
//| [[slots_table.MechanicalLoadDynamics]]<<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
| 0..1 +
xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]
| +++Mechanical load model associated with this synchronous machine model.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<SynchronousMachine,`SynchronousMachine`>>
//| [[slots_table.SynchronousMachine]]<<SynchronousMachine,`SynchronousMachine`>>
| 1 +
xref::class/SynchronousMachine.adoc[`SynchronousMachine`]
| +++Synchronous machine to which synchronous machine dynamics model applies.+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
//| [[slots_table.TurbineGovernorDynamics]]<<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 0..* +
xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to...+++
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| <<damping,`damping`>>
//| [[slots_table.damping]]<<damping,`damping`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<inertia,`inertia`>>
//| [[slots_table.inertia]]<<inertia,`inertia`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor,`saturationFactor`>>
//| [[slots_table.saturationFactor]]<<saturationFactor,`saturationFactor`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<saturationFactor120,`saturationFactor120`>>
//| [[slots_table.saturationFactor120]]<<saturationFactor120,`saturationFactor120`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used...+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorLeakageReactance,`statorLeakageReactance`>>
//| [[slots_table.statorLeakageReactance]]<<statorLeakageReactance,`statorLeakageReactance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<statorResistance,`statorResistance`>>
//| [[slots_table.statorResistance]]<<statorResistance,`statorResistance`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CrossCompoundTurbineGovernorDyanmics]
=== `CrossCompoundTurbineGovernorDyanmics`
+++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDyanmics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.CrossCompoundTurbineGovernorDyanmics,&#10548;>>
--
////


//[discrete]
[#CrossCompoundTurbineGovernorDynamics]
=== `CrossCompoundTurbineGovernorDynamics`
+++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDynamics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.CrossCompoundTurbineGovernorDynamics,&#10548;>>
--
////


//[discrete]
[#damping]
=== `damping`
+++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.damping`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.damping,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#efdBaseRatio]
=== `efdBaseRatio`
+++Ratio (exciter voltage/generator voltage) of <i>Efd</i> bases of exciter and generator models (&gt; 0). Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.efdBaseRatio`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

////
[.text-left]
--
<<slots_table.efdBaseRatio,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model associated with this synchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.ExcitationSystemDynamics`
| Cardinality
| 0..1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#GenICompensationForGenJ]
=== `GenICompensationForGenJ`
+++Compensation of voltage compensator's generator for current flow out of this  generator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.GenICompensationForGenJ`
| Cardinality
| 0..*
| Type
| xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.GenICompensationForGenJ,&#10548;>>
--
////


//[discrete]
[#ifdBaseType]
=== `ifdBaseType`
+++Excitation base system mode. It should be equal to the value of <i>WLMDV</i> given by the user. <i>WLMDV</i> is the PU ratio between the field voltage and the excitation current: <i>Efd</i> = <i>WLMDV</i> x <i>Ifd</i>. Typical value = ifag.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.ifdBaseType`
| Cardinality
| 0..1
| Type
| xref::enumeration/IfdBaseKind.adoc[`IfdBaseKind`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

////
[.text-left]
--
<<slots_table.ifdBaseType,&#10548;>>
--
////


//[discrete]
[#inertia]
=== `inertia`
+++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.inertia`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.inertia,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ks]
=== `ks`
+++Saturation loading correction factor (<i>Ks</i>) (&gt;= 0).  Used only by type J model.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.ks`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ks,&#10548;>>
--
////


//[discrete]
[#MechanicalLoadDynamics]
=== `MechanicalLoadDynamics`
+++Mechanical load model associated with this synchronous machine model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.MechanicalLoadDynamics`
| Cardinality
| 0..1
| Type
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.MechanicalLoadDynamics,&#10548;>>
--
////


//[discrete]
[#modelType]
=== `modelType`
+++Type of synchronous machine model used in dynamic simulation applications.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.modelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/SynchronousMachineModelKind.adoc[`SynchronousMachineModelKind`]


|===

////
[.text-left]
--
<<slots_table.modelType,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rotorType]
=== `rotorType`
+++Type of rotor on physical machine.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.rotorType`
| Cardinality
| 0..1
| Type
| xref::enumeration/RotorKind.adoc[`RotorKind`]


|===

////
[.text-left]
--
<<slots_table.rotorType,&#10548;>>
--
////


//[discrete]
[#saturationFactor]
=== `saturationFactor`
+++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor,&#10548;>>
--
////


//[discrete]
[#saturationFactor120]
=== `saturationFactor120`
+++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor120`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor120,&#10548;>>
--
////


//[discrete]
[#saturationFactor120QAxis]
=== `saturationFactor120QAxis`
+++Quadrature-axis saturation factor at 120% of rated terminal voltage (<i>S12q</i>) (&gt;= SynchonousMachineDetailed.saturationFactorQAxis).  Typical value = 0,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.saturationFactor120QAxis`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

////
[.text-left]
--
<<slots_table.saturationFactor120QAxis,&#10548;>>
--
////


//[discrete]
[#saturationFactorQAxis]
=== `saturationFactorQAxis`
+++Quadrature-axis saturation factor at rated terminal voltage (<i>S1q</i>) (&gt;= 0). Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.saturationFactorQAxis`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

////
[.text-left]
--
<<slots_table.saturationFactorQAxis,&#10548;>>
--
////


//[discrete]
[#statorLeakageReactance]
=== `statorLeakageReactance`
+++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorLeakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorLeakageReactance,&#10548;>>
--
////


//[discrete]
[#statorResistance]
=== `statorResistance`
+++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorResistance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.statorResistance,&#10548;>>
--
////


//[discrete]
[#SynchronousMachine]
=== `SynchronousMachine`
+++Synchronous machine to which synchronous machine dynamics model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.SynchronousMachine`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachine,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Damping time constant for “Canay” reactance (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#tpdo]
=== `tpdo`
+++Direct-axis transient rotor time constant (<i>T'do</i>) (&gt; SynchronousMachineTimeConstantReactance.tppdo).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.tpdo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpdo,&#10548;>>
--
////


//[discrete]
[#tppdo]
=== `tppdo`
+++Direct-axis subtransient rotor time constant (<i>T''do</i>) (&gt; 0).  Typical value = 0,03.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.tppdo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tppdo,&#10548;>>
--
////


//[discrete]
[#tppqo]
=== `tppqo`
+++Quadrature-axis subtransient rotor time constant (<i>T''qo</i>) (&gt; 0). Typical value = 0,03.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.tppqo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tppqo,&#10548;>>
--
////


//[discrete]
[#tpqo]
=== `tpqo`
+++Quadrature-axis transient rotor time constant (<i>T'qo</i>) (&gt; SynchronousMachineTimeConstantReactance.tppqo). Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.tpqo`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpqo,&#10548;>>
--
////


//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to support hydro units that have multiple turbines on one generator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.TurbineGovernorDynamics`
| Cardinality
| 0..*
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineGovernorDynamics,&#10548;>>
--
////


//[discrete]
[#xDirectSubtrans]
=== `xDirectSubtrans`
+++Direct-axis subtransient reactance (unsaturated) (<i>X''d</i>) (&gt; RotatingMachineDynamics.statorLeakageReactance).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xDirectSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xDirectSubtrans,&#10548;>>
--
////


//[discrete]
[#xDirectSync]
=== `xDirectSync`
+++Direct-axis synchronous reactance (<i>Xd</i>) (&gt;= SynchronousMachineTimeConstantReactance.xDirectTrans). The quotient of a sustained value of that AC component of armature voltage that is produced by the total direct-axis flux due to direct-axis armature current and the value of the AC component of this current, the machine running at rated speed.  Typical value = 1,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xDirectSync`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xDirectSync,&#10548;>>
--
////


//[discrete]
[#xDirectTrans]
=== `xDirectTrans`
+++Direct-axis transient reactance (unsaturated) (<i>X'd</i>) (&gt;= SynchronousMachineTimeConstantReactance.xDirectSubtrans).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xDirectTrans`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xDirectTrans,&#10548;>>
--
////


//[discrete]
[#xQuadSubtrans]
=== `xQuadSubtrans`
+++Quadrature-axis subtransient reactance (<i>X''q</i>) (&gt; RotatingMachineDynamics.statorLeakageReactance).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xQuadSubtrans`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xQuadSubtrans,&#10548;>>
--
////


//[discrete]
[#xQuadSync]
=== `xQuadSync`
+++Quadrature-axis synchronous reactance (<i>Xq</i>) (&gt;= SynchronousMachineTimeConstantReactance.xQuadTrans).
The ratio of the component of reactive armature voltage, due to the quadrature-axis component of armature current, to this component of current, under steady state conditions and at rated frequency.  Typical value = 1,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xQuadSync`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xQuadSync,&#10548;>>
--
////


//[discrete]
[#xQuadTrans]
=== `xQuadTrans`
+++Quadrature-axis transient reactance (<i>X'q</i>) (&gt;= SynchronousMachineTimeConstantReactance.xQuadSubtrans).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineTimeConstantReactance.xQuadTrans`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.xQuadTrans,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
